components/menu/index.css
#menu .rightchatspacer {
  height: 100%;
}
#menu .header_logo {
  vertical-align: bottom;
}
#menu .header_logo.mobiledevice {
  width: 20px;
  height: 20px;
}
#menu .header_logo.all,
#menu .header_logo.workstation {
  height: 20px;
}
#menu .sitenamelabel {
  text-transform: uppercase;
}
#menu .menuWrapper {
  width: 100%;
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  height: calc(65px + var(--app-margin-top));
  padding-top: var(--app-margin-top);
  z-index: 20;
  contain: strict;
  background: rgb(var(--background-total-theme));
  /*
		.sections{
			-webkit-user-select: none;
  			-webkit-app-region: drag;

			  .section{
				-webkit-app-region: none;
			  }
		}*/
}
#menu .usericon {
  position: relative;
}
#menu.static .menuWrapper {
  position: absolute;
}
#menu.static .menutoppanel {
  display: none!important;
}
#menu .icon {
  position: relative;
}
#menu .icon .localizationicon {
  position: absolute;
  right: -2%;
  bottom: 19%;
  width: 15px;
  height: 15px;
  box-shadow: 0 5px 7px -5px rgba(var(--color-shadow-base), 0.4);
}
#menu .icon .changeaccount {
  position: absolute;
  left: -16px;
  top: 50%;
  margin-top: -8px;
  width: 16px;
  height: 16px;
}
#menu .menutoppanel {
  margin: 0 auto;
  position: fixed;
  width: 440px;
  top: 0;
  left: 50%;
  margin-left: -220px;
  z-index: 210;
  height: 65px!important;
  bottom: auto;
  white-space: nowrap;
  font-size: 0.9em;
}
#menu.searchactive .sections .items.searchWrapper {
  display: block;
}
#menu.searchactive .sections .items.searchIcons .icon i {
  font-weight: 500;
}
#menu.searchactive .sections .items.searchIcons .icon i:before {
  content: '\f057';
}
#menu.searchactive .sections .items .item.wallets:hover {
  padding-right: 0;
  padding-left: 0;
}
#menu.searchactive .sections .items .item.navWrapperItem {
  display: none;
}
#menu.searchactive .menuWrapper {
  contain: none;
}
#menu.menupanelactive:not(.searchactive) .sections .items .item.navWrapperItem {
  display: block;
}
#menu.menupanelactive:not(.searchactive) .postssearch .searchPanel,
#menu.menupanelactive:not(.searchactive) .postssearch .searchInputWrapper {
  display: none;
}
#menu.menupanelactive:not(.searchactive) .postssearch .searchInput {
  background: transparent;
  border: 1px solid transparent;
}
#menu.menupanelactive:not(.searchactive) .postssearch input {
  color: #0e1c2b;
  background: transparent;
}
#menu.menupanelactive:not(.searchactive) .postssearch .searchIconLabel,
#menu.menupanelactive:not(.searchactive) .postssearch .searchPanel {
  color: #0e1c2b;
  background: transparent;
}
#menu.menupanelactive:not(.searchactive) .sections .items.searchWrapper {
  max-width: 40px;
}
#menu.menupanelactive:not(.searchactive) .postssearch .searchFastResultWrapper {
  display: none!important;
}
#menu .sections {
  width: 95%;
  height: 100%;
  max-width: 1280px;
  margin: 0 auto;
  padding: 0 1em;
  padding-right: 0;
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-between;
}
#menu .sections .section {
  height: 100%;
  padding: 0 1em;
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-between;
  align-items: center;
}
#menu .sections .section.right {
  padding-right: 0;
}
#menu .sections .section.centerpart {
  padding-right: 0;
  padding-left: 0;
}
#menu .sections .section.leftpart {
  padding-left: 0;
  min-width: 200px;
}
#menu .sections .userpic {
  box-shadow: 0 5px 10px -5px rgba(var(--color-shadow-base), 0.4);
}
#menu .sections .items {
  height: 100%;
}
#menu .sections .items .table {
  width: auto;
  height: 100%;
}
#menu .sections .items .table > div {
  padding: 0.5em;
  padding-right: 0;
  padding-left: 0;
  vertical-align: middle;
}
#menu .sections .items.keyexportWrapper {
  margin-left: 0.5em;
  color: rgb(var(--color-txt-orange));
}
#menu .sections .items.control-app {
  display: flex;
  align-items: center;
  justify-content: center;
  color: rgb(var(--neutral-grad-1));
  box-sizing: border-box;
  padding: 0 0.5em;
  font-size: 0.9em;
}
#menu .sections .items.control-app > div {
  margin: 0 0.5em;
  cursor: pointer;
}
#menu .sections .items.control-app > div:hover {
  color: rgb(var(--color-txt-gray));
}
#menu .sections .items.notificationsWrapper {
  margin-right: 0.5em;
}
#menu .sections .items.gethotpostsWrapper {
  color: rgb(var(--color-txt-orange));
  margin-left: 1em;
}
#menu .sections .items.gethotpostsWrapper i {
  font-size: 1.1em;
}
#menu .sections .items.searchWrapper {
  max-width: 340px;
  float: none;
  font-size: 0.9em;
}
#menu .sections .items.searchWrapper .item {
  width: 100%;
  min-width: 340px;
}
#menu .sections .items.searchWrapper .postssearchwrapper {
  padding: 15px 0;
  width: 100%;
}
#menu .sections .items.searchIcons {
  margin-right: 1em;
}
#menu .sections .items.searchIcons .icon {
  cursor: pointer;
  -moz-transition: 0.3s;
  -o-transition: 0.3s;
  -webkit-transition: 0.3s;
  transition: 0.3s;
}
#menu .sections .items.searchIcons .icon:hover {
  color: rgb(var(--color-txt-ac));
}
#menu .sections .items .item {
  width: auto;
  height: 100%;
  white-space: nowrap;
  display: flex;
  align-items: center;
}
#menu .sections .items .item .icon {
  padding: 0;
  padding-left: 0.5em;
  padding-right: 0.35em;
  position: relative;
  cursor: pointer;
}
#menu .sections .items .item .icon .amount {
  position: absolute;
  left: 50%;
  top: 50%;
  padding: 0 0.5em;
  min-width: 16px;
  height: 16px;
  line-height: 16px;
  text-align: center;
  font-size: 0.5em;
  background: rgba(var(--color-bg-ac-bright), 0.95);
  color: rgb(var(--text-on-bg-ac-color));
  box-shadow: 0 5px 7px -5px rgba(var(--color-shadow-base), 0.4);
  z-index: 20;
  border-radius: 50%;
  display: none;
}
#menu .sections .items .item.changeaccount .icon {
  padding-right: 0.125em;
  padding-left: 0.125em;
  padding-bottom: 0.25em;
  opacity: 0.6;
  cursor: pointer;
}
#menu .sections .items .item.changeaccount .icon:hover {
  opacity: 1;
}
#menu .sections .items .item.user .icon {
  padding-right: 0;
}
/* ... */

